--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.1.2
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
