--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
   dartz: ^0.10.1
+  get_it: ^8.0.0
 
 dev_dependencies:
   flutter_test:
