--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^5.3.1
   dartz: ^0.10.1
   get_it: ^8.0.0
+  cloud_firestore: ^5.4.4
 
 dev_dependencies:
   flutter_test:
