--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dartz: ^0.10.1
   get_it: ^8.0.0
   cloud_firestore: ^5.4.4
+  firebase_storage: ^12.3.4
 
 dev_dependencies:
   flutter_test:
