--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   get_it: ^8.0.0
   cloud_firestore: ^5.4.4
   firebase_storage: ^12.3.4
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
