--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^5.4.4
   firebase_storage: ^12.3.4
   flutter_spinkit: ^5.2.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
