--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,3 @@
-org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
-systemProp.org.gradle.internal.http.socketTimeout=600000
-systemProp.org.gradle.internal.http.connectionTimeout=600000
