launch icon changed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_storage: ^12.3.6
   flutter_spinkit: ^5.2.1
   cached_network_image: ^3.4.1
+  flutter_launcher_icons: ^0.14.2
 
 dev_dependencies:
   flutter_test:
