--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,7 +33,7 @@ android {
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 23
         targetSdk = 34
-        versionCode = 6
+        versionCode = 7
         versionName = "0.0.1"
         multiDexEnabled true
     }
@@ -52,6 +52,9 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.release
+        }
+        debug {
+            applicationIdSuffix ".debug"
         }
     }
 }
