--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   cached_network_image: ^3.4.1
   flutter_launcher_icons: ^0.14.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
