--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   url_launcher: ^6.3.1
   mailer: ^6.4.1
   flutter_dotenv: ^5.2.1
+  in_app_update: ^4.2.3
 
 dev_dependencies:
   flutter_test:
