--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,12 @@ dependencies:
   mailer: ^6.4.1
   flutter_dotenv: ^5.2.1
   in_app_update: ^4.2.3
+  excel: ^4.0.6
+  file_picker: ^9.1.0
+  http: ^1.3.0
+  path_provider: ^2.1.5
+  googleapis: ^14.0.0
+  googleapis_auth: ^1.6.0
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +82,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/excel-api-453817-c2646fb8efe8.json
     - images/
     - .env
     # - images/a_dot_ham.jpeg
