--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   googleapis: ^14.0.0
   googleapis_auth: ^1.6.0
   google_sign_in: ^6.3.0
+  google_mobile_ads: ^6.0.0
 
 dev_dependencies:
   flutter_test:
