--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   googleapis_auth: ^1.6.0
   google_sign_in: ^6.3.0
   google_mobile_ads: ^6.0.0
+  cloud_functions: ^5.5.0
 
 dev_dependencies:
   flutter_test:
