--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   google_sign_in: ^6.1.5
   google_mobile_ads: ^6.0.0
   cloud_functions: ^5.5.0
+  image_cropper: ^9.1.0
 
 dev_dependencies:
   flutter_test:
